--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "coverage": "c8 npm test",
     "lint": "eslint ./ --fix",
     "prepare": "husky install"
-    
   },
   "author": "",
   "license": "ISC",
@@ -21,13 +20,13 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
-    "globals": "^15.0.0"
+    "globals": "^15.0.0",
+    "mochawesome": "^7.1.3"
   },
   "dependencies": {
     "c8": "^9.1.0",
     "chai": "^5.1.0",
     "husky": "^9.0.11",
-    "mocha": "^10.4.0",
-    "mochawesome": "^7.1.3"
+    "mocha": "^10.4.0"
   }
 }
